--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,5 @@
 TODO
 ----
-Figure out how to plot in cpp
 Implement fft to plot audio freq spec with cpp
 downsample.cpp
 convolve.cpp
@@ -12,10 +11,12 @@ Implement bitcrush.cpp
     Not happy with sound. Look into downsampling instead of just dividing each sample
 Implement generate_noise.cpp (can make white noise, filter for other types of noise)
 Implement mix R/L channels
+combine.cpp ?
 Implement distortion.cpp (not sure how this will work)
 ----
 
 Complete:
+Figure out how to plot in cpp with plot_samples.cpp
 Implement fill_out.cpp
 Add ratio of original sample to delayed in add_delay.cpp
 Clean up WavFile class
