--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,8 @@
 TODO
 ----
 Implement fft to plot audio freq spec with cpp
+    -> Make work for wav files with 2 channels
+Organize files into src folder
 downsample.cpp
 convolve.cpp
 Implement add_reverb.cpp
@@ -13,9 +15,11 @@ Implement generate_noise.cpp (can make white noise, filter for other types of no
 Implement mix R/L channels
 combine.cpp ?
 Implement distortion.cpp (not sure how this will work)
-----
 
-Complete:
+~
+
+Complete
+----
 Figure out how to plot in cpp with plot_samples.cpp
 Implement fill_out.cpp
 Add ratio of original sample to delayed in add_delay.cpp
